cluster/apps/grafana-alloy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana-alloy
  labels:
    name: grafana-alloy
